--- a/src/App.scss
+++ b/src/App.scss
@@ -194,4 +194,37 @@ body {
 .experience-section {
   min-height: 100vh;
   padding: 10px;
+  color: var(--fontlight);
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  &__nav {
+    position: relative;
+    border-bottom: 1px solid var(--fontlight);
+    display: flex;
+    column-gap: 5px;
+    width: max-content;
+    button {
+      cursor: pointer;
+      color: var(--fontlight);
+      background-color: var(--darkBackground);
+      border: none;
+      padding: 5px;
+      transition: background-color 0.2s ease-in, color 0.2s ease-in;
+      &:hover {
+        color: var(--fontHighlight);
+        background-color: var(--darkist);
+      }
+    }
+    .current-tab {
+      color: var(--fontHighlight);
+    }
+    .slected-tab-underline {
+      position: absolute;
+      height: 1px;
+      bottom: -1px;
+      background-color: var(--fontHighlight);
+      transition: width 0.2s ease-in, left 0.2s ease-in;
+    }
+  }
 }
