--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,13 @@ body {
   position: relative;
 }
 
+.canvas-container {
+  position: fixed;
+  .canvas {
+    background-color: black;
+  }
+}
+
 .nav-bar {
   z-index: 100;
   position: fixed;
