--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 :root {
   --easing: cubic-bezier(0.645, 0.045, 0.355, 1);
-  --darkBackground: #205072;
+  // --darkBackground: #205072;
+  --darkBackground: #1c2225;
   --darkist: #437285;
   --darker: #669498;
   --dark: #89b6ac;
@@ -25,7 +26,7 @@ body {
 .canvas-container {
   position: fixed;
   .canvas {
-    background-color: black;
+    background-color: var(--darkBackground);
   }
 }
 
