--- a/src/App.scss
+++ b/src/App.scss
@@ -60,6 +60,7 @@ body {
   position: fixed;
   height: 100vh;
   width: 100vw;
+
   @media (min-width: $tablet) {
     width: 95vw;
     height: 95vh;
@@ -67,10 +68,16 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
   }
+  &-relative {
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
 }
-.background-blobs {
+
+.blob-wrapper {
   position: absolute;
-  height: 100%;
+  height: 150%;
   width: 150%;
   @media (min-width: $tablet) {
     height: 100%;
@@ -80,22 +87,35 @@ body {
     transition: opacity 300ms var(--easing);
     opacity: 0.3;
   }
-  &--upper-left {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-  }
-  &--lower-right {
-    position: absolute;
-    bottom: 0px;
+  &--parent-lr {
     right: 0px;
+    bottom: 0px;
+  }
+  &--ul {
+    position: absolute;
+    top: -19px;
+    left: -14px;
+    @media (min-width: $tablet) {
+      top: 0px;
+      left: 0px;
+    }
+  }
+  &--lr {
+    position: absolute;
+    bottom: -15px;
+    right: -22px;
+    @media (min-width: $tablet) {
+      bottom: 0px;
+      right: 0px;
+    }
   }
 }
+
 .intersection-ref {
   &--hero {
     height: 10vh;
     width: 100vw;
-    background-color: tomato;
+    // background-color: tomato;
   }
 }
 
