--- a/src/HeroStyles.scss
+++ b/src/HeroStyles.scss
@@ -31,6 +31,41 @@
         max-width: 70%;
       }
     }
-
+  }
+  .connect-button {
+    padding: 0.75rem 1rem;
+    display: block;
+    width: max-content;
+    border: solid 1px var(--fontHighlight);
+    background-color: transparent;
+    // color: var(--fontlight);
+    color: var(--fontHighlight);
+    font-family: var(--fontFamilyContent);
+    cursor: pointer;
+    margin-top: 25px;
+    text-decoration: none;
+  }
+}
+.intersection-hero-top {
+  position: absolute;
+  top: 15%;
+  height: 25%;
+  width: 100vw;
+  // background-color: rgba(255, 99, 71, 0.101);
+  @media (min-width: $tablet) {
+    top: 25%;
+  }
+  &--top {
+    position: relative;
+  }
+}
+.intersection-hero-bottom {
+  position: absolute;
+  bottom: 25%;
+  height: 25%;
+  width: 100vw;
+  // background-color: rgba(255, 99, 71, 0.101);
+  &--bottom {
+    position: relative;
   }
 }
