--- a/src/App.scss
+++ b/src/App.scss
@@ -175,7 +175,7 @@ body {
 
 .heading-text {
   color: var(--fontLightist);
-  font-size: clamp(40px, 10vw, 63px);
+  font-size: 3rem;
   margin-bottom: 8px;
   @media (min-width: $tablet) {
     font-size: 70px;
@@ -187,13 +187,13 @@ body {
 
 .subheading-text {
   color: var(--fontlight);
-  font-size: clamp(40px, 10vw, 63px);
+  font-size: 2.2rem;
   margin-bottom: 26px;
   letter-spacing: -1px;
-  line-height: clamp(38px, 9vw, 60px);
+  line-height: 2.3rem;
   @media (min-width: $tablet) {
-    font-size: 70px;
-    line-height: 50px;
+    font-size: 58px;
+    line-height: 58px;
   }
   @media (min-width: $tablet-wide) {
     font-size: 65px;
