--- a/src/App.scss
+++ b/src/App.scss
@@ -22,8 +22,9 @@ $desktop-wide: 1440px;
   --fontlighter: #ccd6f6;
   --fontLightist: #e6f1ff;
   --fontHighlight: #ffb464;
-  --fontFamilyHeading: "SF-Pro", sans-serif;
+  --fontFamilyHeading: "SF Pro", sans-serif;
   --fontFamilyContent: "RobotoMono", monospace;
+  --fontFamilySubHeading: "SF Pro", sans-serif;
 }
 
 // application base
@@ -177,6 +178,9 @@ body {
   color: var(--fontLightist);
   font-size: 3rem;
   margin-bottom: 8px;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: -2px;
   @media (min-width: $tablet) {
     font-size: 70px;
   }
@@ -188,9 +192,13 @@ body {
 .subheading-text {
   color: var(--fontlight);
   font-size: 2.2rem;
+  // font-weight: 700;
   margin-bottom: 26px;
-  letter-spacing: -1px;
+  // letter-spacing: -1px;
   line-height: 2.3rem;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: -2px;
   @media (min-width: $tablet) {
     font-size: 58px;
     line-height: 58px;
