--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,7 @@ body {
   position: fixed;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 
   @media (min-width: $tablet) {
     width: 95vw;
@@ -73,6 +74,8 @@ body {
     position: relative;
     height: 100%;
     width: 100%;
+    max-height: 100vh;
+    overflow: hidden;
   }
 }
 
@@ -115,7 +118,8 @@ body {
 .hero-wrapper {
   position: relative;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .observer-blobs {
