allow overflow for landscape

--- a/src/App.scss
+++ b/src/App.scss
@@ -125,7 +125,7 @@ body {
   width: 100vw;
   height: 100vh;
   height: -webkit-fill-available;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .observer-blobs {
